fix: Position of delete button shouldn't overlap # bytes

--- a/packages/frontend/js/main/tabs/batch/batch-items/batch-item/style.css
+++ b/packages/frontend/js/main/tabs/batch/batch-items/batch-item/style.css
@@ -10,7 +10,7 @@
 .deleteButton {
     composes: lintEditorButton from "../../../../../linteditor/style.css";
     position: absolute;
-    bottom: 70px;
+    bottom: 90px;
     z-index: 3;
 
     &::before {
